--- a/public/fetch.html
+++ b/public/fetch.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/fetch.css">
 </head>
 <body>
 
 <ul id="movielist"> </ul>
+
+
+
+
+
+
+
 
 <script src="fetch.js"></script>
 </body>
